--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
+    "react-select": "^5.8.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
